fix:scroll lock on mobile menu issue

--- a/app/app.css
+++ b/app/app.css
@@ -43,3 +43,13 @@ html {
 .slick-arrow {
   display: none !important;
 }
+
+.example::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.example {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
